--- a/markdwonPage/my-app/src/index.css
+++ b/markdwonPage/my-app/src/index.css
@@ -1,4 +1,15 @@
-.container {
+body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
     background-color: #20b2aa;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.edit_input {
+    width: 25em;
+    height: 12.5em;
+    border: solid 2px #0087ab;
 }
