--- a/drumMachine/my-app/src/index.css
+++ b/drumMachine/my-app/src/index.css
@@ -14,6 +14,7 @@ html, body {
 .drum-pad {
   background-color: #D1B894;
   border: 1px solid black;
+  border-radius: 8px;
   -moz-box-shadow: 2px 4px 3px #766F57;
   -webkit-box-shadow: 2px 4px 3px #766F57;
   box-shadow: 2px 4px 3px #766F57;
