--- a/drumMachine/my-app/src/index.css
+++ b/drumMachine/my-app/src/index.css
@@ -112,3 +112,12 @@ input:checked + .slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
+
+.title {
+  color: #B4B7BA;
+}
+
+p {
+  -webkit-margin-before: unset;
+  -webkit-margin-after: unset;
+}
