hardcoded the description showing and started to do power slider

--- a/drumMachine/my-app/src/index.css
+++ b/drumMachine/my-app/src/index.css
@@ -17,7 +17,7 @@ html, body {
   -moz-box-shadow: 2px 4px 3px #766F57;
   -webkit-box-shadow: 2px 4px 3px #766F57;
   box-shadow: 2px 4px 3px #766F57;
-  margin: 8%;
+  margin: 10px;
   width: 7em;
   height: 5em;
 }
