created volume slider for the drum pads

--- a/drumMachine/my-app/src/index.css
+++ b/drumMachine/my-app/src/index.css
@@ -121,3 +121,42 @@ p {
   -webkit-margin-before: unset;
   -webkit-margin-after: unset;
 }
+
+/* volume slider */
+
+.vol-slider-container {
+  width: 100%;
+  margin: 5%;
+}
+
+.volume-slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 0.9em;
+  background: #D1B894;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.volume-slider:hover {
+  opacity: 1;
+}
+
+.volume-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 27px;
+  background: #2E4A62;
+  cursor: pointer;
+}
+
+.volume-slider::-moz-range-thumb {
+  width: 25px;
+  height: 27px;
+  background: #2E4A62;
+  cursor: pointer;
+}
