--- a/drumMachine/my-app/src/index.css
+++ b/drumMachine/my-app/src/index.css
@@ -22,16 +22,29 @@ html, body {
   height: 5em;
 }
 
-button:hover {
+.drum-pad:hover {
   background-color: #A9754F;
 }
 
-button:active {
+.drum-pad:active {
   background-color: #6C4F3D;
   box-shadow: 0 5px #666;
   -webkit-box-shadow: 0 5px #666;
   -moz-box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+
+.drum-bad {
+  background-color: #6C4F3D;
+  box-shadow: 0 5px #666;
+  border: unset;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 5px #666;
+  -moz-box-shadow: 0 5px #666;
+  transform: translateY(4px);
+  margin: 10px;
+  width: 7em;
+  height: 5em;
 }
 
 #drum-machine {
