--- a/pomodoro-clock/src/styles/index.css
+++ b/pomodoro-clock/src/styles/index.css
@@ -24,7 +24,8 @@ body {
     border-radius: 50%;
     width: 23rem;
     height: 23rem;
-    margin-left: 25%;
+    margin-left: 35%;
+    margin-right: 35%;
 }
 
 .row {
@@ -73,4 +74,28 @@ i {
 #time-left {
     font-size: 2.5rem;
     margin: 20% 0 0 38%;
+}
+
+.g {
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 10px solid #564E58;
+    /* border: solid #564E58;
+    border-width: 0 10px 10px 0;
+    background-color: #F2EFE9;
+    display: inline-block; */
+}
+
+#start_stop {
+    text-decoration: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding: none;
+    border: none;
+    margin: 10% 0 0 35%;
+    background-color: #F2EFE9;
+    cursor: pointer;
 }
